--- a/app/impero/src/Impero/Apache/View/add.twig
+++ b/app/impero/src/Impero/Apache/View/add.twig
@@ -1,3 +1,9 @@
-Add site
+{% extends 'Weblab/Generic/View/panel.twig' %}
 
+{% block title %}
+Add site
+{% endblock %}
+
+{% block content %}
 {{ siteForm | raw }}
+{% endblock %}
