--- a/app/impero/src/Impero/Apache/View/index.twig
+++ b/app/impero/src/Impero/Apache/View/index.twig
@@ -1,17 +1,32 @@
-List sites
-<table>
-    <thead>
+{% extends 'Weblab/Generic/View/list.twig' %}
+
+{% block title %}
+    List sites
+    <div class="btn-group btn-group-sm" role="group" aria-label="..." style="text-align: right;">
+        <a type="button" class="btn btn-success" href="{{ url('apache.list') }}">Add</a>
+    </div>
+{% endblock %}
+
+{% block content %}
+    <table class="table">
+        <thead>
         <tr>
             <th>Server name</th>
-            <th>Edit</th>
+            <th></th>
         </tr>
-    </thead>
-    <tbody>
-    {% for site in sites %}
-    <tr>
-        <td>{{ site.server_name }}</td>
-        <td><a href="{{ site.edit_url }}">Edit</a></td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        {% for site in sites %}
+            <tr>
+                <td>{{ site.server_name }}</td>
+                <td>
+                    <div class="btn-group btn-group-sm" role="group" aria-label="...">
+                        <a type="button" class="btn btn-warning" href="{{ site.edit_url }}">Edit</a>
+                        <a type="button" class="btn btn-danger" href="{{ site.delete_url }}">Delete</a>
+                    </div>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
