--- a/app/impero/src/Weblab/Generic/View/generic.twig
+++ b/app/impero/src/Weblab/Generic/View/generic.twig
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Impero</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -30,40 +30,40 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Domains <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/dev.php/apache">Sites</a></li>
-                        <li><a href="/dev.php/dns">DNS</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Apache status</a></li>
-                        <li><a href="#">DNS status</a></li>
+                        <li><a href="/dev.php/apache/sites">Sites</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">FTP <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/dev.php/ftp">FTP accounts</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">FTP status</a></li>
+                        <li><a href="/dev.php/ftp/accounts">FTP accounts</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MySQL <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/dev.php/mysql/database">Databases</a></li>
-                        <li><a href="/dev.php/mysql/user">Users</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Database status</a></li>
+                        <li><a href="/dev.php/mysql/databases">Databases</a></li>
+                        <li><a href="/dev.php/mysql/users">Users</a></li>
                     </ul>
                 </li>
-                <li><a href="/dev.php/mail">Mail</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Status <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/dev.php/status/mysql">MySQL</a></li>
+                        <li><a href="/dev.php/status/apache">Users</a></li>
+                        <li><a href="/dev.php/status/ftp">FTP</a></li>
+                        <li><a href="/dev.php/status/usage">Usage</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logged in as Bojan Rajh <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Logout</a></li>
-                        <li><a href="#">Settings</a></li>
+                        <li><a href="/profile/logout">Logout</a></li>
+                        <li><a href="/profile/settings">Settings</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="/help">Help</a></li>
                     </ul>
                 </li>
             </ul>
