--- a/app/impero/src/Pckg/Generic/View/generic.twig
+++ b/app/impero/src/Pckg/Generic/View/generic.twig
@@ -55,13 +55,28 @@
                         <li><a href="/dev.php/status/usage">Usage</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Generic <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/dev.php/admin/generic/actions">Actions</a></li>
+                        <li><a href="/dev.php/admin/generic/layouts">Layouts</a></li>
+                        <li><a href="/dev.php/admin/generic/routes">Routes</a></li>
+                        <li><a href="/dev.php/admin/generic/variables">Variables</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dynamic <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/dev.php/dynamic/tables/list/7">Tables</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logged in as Bojan Rajh <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logged in as {{ _auth.user('email') }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/profile/logout">Logout</a></li>
-                        <li><a href="/profile/settings">Settings</a></li>
+                        <li><a href="/logout">Logout</a></li>
+                        <li><a href="/settings">Settings</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/help">Help</a></li>
                     </ul>
