--- a/app/impero/src/Pckg/Generic/View/generic.twig
+++ b/app/impero/src/Pckg/Generic/View/generic.twig
@@ -10,6 +10,10 @@
     {{ _assetManager.getGoogleFonts() | raw }}
 
     <script src="https://use.fontawesome.com/90d4cc6ef0.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/t/bs/dt-1.10.11/datatables.min.css"/>
+
+    <script type="text/javascript" src="https://cdn.datatables.net/t/bs/dt-1.10.11/datatables.min.js"></script>
 </head>
 <body>
 
