--- a/app/impero/src/Pckg/Generic/View/generic.twig
+++ b/app/impero/src/Pckg/Generic/View/generic.twig
@@ -29,17 +29,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             {{ _menuService.build('admin') | raw }}
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Logged in as {{ _auth.user('email') }} <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/logout">Logout</a></li>
-                        <li><a href="/settings">Settings</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="/help">Help</a></li>
-                    </ul>
-                </li>
-            </ul>
+
+            {{ _pluginService.make('Pckg\\Auth\\Controller\\Auth', 'getUserHeader') | raw }}
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
