--- a/app/impero/src/Pckg/Generic/View/generic.twig
+++ b/app/impero/src/Pckg/Generic/View/generic.twig
@@ -35,7 +35,7 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container">
+<div class="container-fluid">
     {% block content %}{{ content | raw }}{% endblock %}
 </div>
 
