Created derive, fixed apache and ftp

--- a/app/impero/src/Pckg/Generic/View/generic.twig
+++ b/app/impero/src/Pckg/Generic/View/generic.twig
@@ -32,16 +32,7 @@
     {% block content %}{{ content | raw }}{% endblock %}
 </div>
 
-{{ _assetManager.getMeta(['css', 'js'], ['footer']) | raw }}
-
-{% if _debugBar %}
-    {# temp, we need to execute this before render in PHP #}
-    {% set renderer = _debugBar.getJavascriptRenderer() %}
-    {% set renderHead = renderer.renderHead() %}
-    {% set render = renderer.render() %}
-    {{ renderHead | raw }}
-    {{ render | raw }}
-{% endif %}
+{% include '_foot.twig' %}
 
 </body>
 </html>
