--- a/app/derive/src/Gnp/Orders/View/allocation.twig
+++ b/app/derive/src/Gnp/Orders/View/allocation.twig
@@ -44,7 +44,7 @@
 
 <script type="text/javascript">
     var orderAttributes = new Vue({
-        el: '.container',
+        el: '.container-fluid',
         data: function () {
             return {
                 similarOrders: [],
