--- a/app/derive/src/Gnp/Orders/View/allocation.twig
+++ b/app/derive/src/Gnp/Orders/View/allocation.twig
@@ -10,7 +10,7 @@
         <h2>Grouped orders ({{ similarOrders.length }})</h2>
         {% verbatim %}
         <p v-if="loading.similarOrders">Loading similar orders ...</p>
-        <table v-if="!loading.similarOrders && similarOrders.length" class="table table-condensed table-hover table-striped">
+        <table v-if="similarOrders.length" class="table table-condensed table-hover table-striped">
             <tr><th>number (id)</th><th>payee</th><th>packets</th><th></th></tr>
             <tr v-for="order in similarOrders" track-by="id">
                 <td>{{ order.num }} ({{ order.id }})</td>
@@ -25,7 +25,7 @@
         </table>
         <h2>Non-allocated orders ({{ nonAllocatedOrders.length }})<input type="text" v-model="nonAllocatedSearch" /></h2>
         <p v-if="loading.nonAllocatedOrders">Loading non-allocated orders ...</p>
-        <table v-if="!loading.nonAllocatedOrders && nonAllocatedOrders.length" class="table table-condensed table-hover table-striped">
+        <table v-if="nonAllocatedOrders.length" class="table table-condensed table-hover table-striped">
             <tr><th>number (id)</th><th>payee</th><th>packets</th><th></th></tr>
             <tr v-for="order in nonAllocatedOrders | filterBy nonAllocatedSearch" track-by="id">
                 <td>{{ order.num }} ({{ order.id }})</td>
