--- a/app/derive/src/Gnp/Orders/View/allocation.twig
+++ b/app/derive/src/Gnp/Orders/View/allocation.twig
@@ -19,7 +19,7 @@
                     {{ order.packetsSummary }}
                 </td>
                 <td>
-                    <a href="#" v-on:click.prevent="remove($index)" class="btn btn-danger btn-sm">Remove</a>
+                    <a href="#" v-on:click.prevent="remove(order)" class="btn btn-danger btn-sm">Remove</a>
                 </td>
             </tr>
         </table>
@@ -34,7 +34,7 @@
                     {{ order.packetsSummary }}
                 </td>
                 <td>
-                    <a href="#" v-on:click.prevent="add($index)" class="btn btn-success btn-sm">Add</a>
+                    <a href="#" v-on:click.prevent="add(order)" class="btn btn-success btn-sm">Add</a>
                 </td>
             </tr>
         </table>
@@ -123,14 +123,14 @@
                 });
             },
 
-            remove: function (index) {
-                this.nonAllocatedOrders.push(this.similarOrders[index]);
-                this.similarOrders.$remove(this.similarOrders[index]);
+            remove: function (order) {
+                this.nonAllocatedOrders.push(order);
+                this.similarOrders.$remove(order);
             },
 
-            add: function (index) {
-                this.similarOrders.push(this.nonAllocatedOrders[index]);
-                this.nonAllocatedOrders.$remove(this.nonAllocatedOrders[index]);
+            add: function (order) {
+                this.similarOrders.push(order);
+                this.nonAllocatedOrders.$remove(order);
             }
         }
     });
