--- a/app/derive/src/Gnp/Orders/View/voucherMail.twig
+++ b/app/derive/src/Gnp/Orders/View/voucherMail.twig
@@ -1,12 +1,27 @@
-<p>Hey!</p>
-<p> </p>
-<p>We are sending you your voucher for Hard Island festival {{ offer.title }} (attached as a PDF).</p>
-<p> </p>
-<p>1) Print it out and bring it with you!</p>
-<p>2) Only the person who made the order received this email. Vouchers for your friends are in the same PDF.</p>
-<p>3) Read the info on the voucher carefully</p>
-<p>4) If you have questions <a href="https://hardisland.com/faq-shop" target="_blank">check the FAQ section</a> or <a
-            href="mailto:info@hardisland.com">contact us by email</a>. We are also available on our <span
-            style="text-decoration: underline;">live support</span> at the right bottom corner of our <a
-            href="http://hardisland.com" target="_blank">website</a> or on our <a href="http://www.fb.com/HardIsland"
-                                                                                  target="_blank">facebook page</a>.</p>
+<html>
+<head>
+</head>
+<body style="margin: 0; padding: 0; background: #f0f0f0; font-family: Arial, sans-serif; font-size: 14px;">
+<div style="width: 600px; margin: 0 auto; clear: both;">
+    <a href="http://hardisland.com/" target="_blank"><img src="http://hi.gonparty.eu/img/logotip-pdf.png"/></a>
+
+    <span style="display: block; clear: both; height: auto; font-size: 30px; margin: 0 auto; margin: 15px; text-transform: uppercase; text-align: center;">Your VOUCHER for Hard Island Festival is here!</span>
+    <span style="display: block; clear: both; height: 1px; background: #ccc;"></span>
+
+    <p>Hey!</p>
+    <p> </p>
+    <p>We are sending you your voucher for Hard Island festival {{ offer.title }} (attached as a PDF).</p>
+    <p> </p>
+    <p>1) Print it out and bring it with you!</p>
+    <p>2) Only the person who made the order received this email. Vouchers for your friends are in the same PDF.</p>
+    <p>3) Read the info on the voucher carefully</p>
+    <p>4) If you have questions <a href="https://hardisland.com/faq-shop" target="_blank">check the FAQ
+            section</a> or <a
+                href="mailto:info@hardisland.com">contact us by email</a>. We are also available on our <span
+                style="text-decoration: underline;">live support</span> at the right bottom corner of our <a
+                href="http://hardisland.com" target="_blank">website</a> or on our <a
+                href="http://www.fb.com/HardIsland"
+                target="_blank">facebook page</a>.</p>
+</div>
+</body>
+</html>
