--- a/app/derive/src/Gnp/Orders/View/tabelize/entityActions/generateVoucher.twig
+++ b/app/derive/src/Gnp/Orders/View/tabelize/entityActions/generateVoucher.twig
@@ -1,3 +1,4 @@
 <div class="generateVoucher">
-    <a type="button" v-on:click.prevent="checkGenerateVoucher()" class="btn btn-warning" href="#" title="{{ __('generate_voucher') }}">Generate voucher<i class="fa fa-pencil" aria-hidden="true"></i></a>
+    <a type="button" v-on:click.prevent="checkGenerateVoucher()" class="btn btn-info" href="#"
+       title="{{ __('generate_voucher') }}"><i class="fa fa-refresh" aria-hidden="true"></i></a>
 </div>
