--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -375,9 +375,11 @@
         <div class="clear"></div>
 
         {% if order.ordersUsers.first().packet.voucherTab %}
+            <div style="page-break-before:always; padding-bottom: 40px;"></div>
             <div>
                 {{ order.ordersUsers.first().packet.voucherTab.title | raw }}
                 {{ order.ordersUsers.first().packet.voucherTab.content | raw }}
+                <div style="page-break-before:always; padding-bottom: 40px;"></div>
                 <img src="http://hi.gonparty.eu/media/{{ order.ordersUsers.first().packet.voucherTab.picture | raw }}" />
             </div>
         {% endif %}
