--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -75,7 +75,7 @@
         }
 
         .container {
-            max-width: 1000px;
+            width: 100%;
             margin: 0 auto;
         }
 
