--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -194,9 +194,9 @@
         }
 
         .phone-numbers .title {
+            display: block;
+            width: 100%;
             float: left;
-            margin-right: 4%;
-            width: 34%;
         }
 
         .phone-numbers .title .line-break {
@@ -208,8 +208,9 @@
         }
 
         .phone-numbers .number {
+            display: block;
+            width: 100%;
             float: left;
-            width: 62%;
         }
 
         .footer {
