--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -172,9 +172,6 @@
             transform-origin: left top 0;
         }
 
-        .package {
-        }
-
         .package .title {
             font-size: 30px;
             font-weight: 800;
@@ -194,7 +191,7 @@
         }
 
         .phone-numbers .title {
-            display: block;
+            display: inline-block;
             width: 100%;
             float: left;
         }
@@ -208,9 +205,11 @@
         }
 
         .phone-numbers .number {
-            display: block;
+            display: inline-block;
             width: 100%;
             float: left;
+            text-align: right;
+            margin: 0 0 12px 0;
         }
 
         .footer {
@@ -349,17 +348,11 @@
                     <div class="line-break"></div>
                     General & Accommodation Info <br />(every day 10 am - 8 pm)
                 </div>
-                <div class="number">
-                    <div class="clear"></div>
-                    +385 958 874 814
-                </div>
-                <div class="clear"></div>
+                <div class="number">+385 958 874 814</div>
                 <div class="title">Assistance 24/7 <br />(urgent matters only)</div>
                 <div class="number">+385 911 614 624</div>
-                <div class="clear"></div>
                 <div class="title">Ambulance 24/7 <br />(medical emergency only)</div>
                 <div class="number">112</div>
-                <div class="clear"></div>
                 <p><b>PRINT YOUR VOUCHER</b> (or SAVE IT on your smartphone to quickly find it and open offline)!</p>
             </div>
             <div class="small-info">
