--- a/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
+++ b/app/derive/src/Gnp/Orders/View/voucher/voucher.twig
@@ -49,6 +49,7 @@
             font-weight: 300;
             margin: 0;
             zoom: 0.595;
+            font-size: 14px;
         }
 
         b {
@@ -341,6 +342,10 @@
                 <b>Terms and conditions:</b><br/>
                 www.hardisland.com/tandc
             </div>
+            <div class="small-info">
+                <b>Frequently asked question</b><br />
+                www.hardisland.com/faq
+            </div>
         </div>
         <div class="right-column">
             <div class="small-info phone-numbers">
@@ -354,10 +359,6 @@
                 <div class="title">Ambulance 24/7 <br />(medical emergency only)</div>
                 <div class="number">112</div>
                 <p><b>PRINT YOUR VOUCHER</b> (or SAVE IT on your smartphone to quickly find it and open offline)!</p>
-            </div>
-            <div class="small-info">
-                <b>Frequently asked question</b><br />
-                www.hardisland.com/faq
             </div>
         </div>
 
